// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReceiptDocument /> should test ReceiptDocument component with default state of empty array 1`] = `
<Row
  className="printme"
>
  <Col
    span={24}
  >
    <Divider
      orientation="left"
    >
      Personal information
    </Divider>
  </Col>
  <Col
    span={24}
  >
    <p>
      Michael
       
      Gichia
    </p>
  </Col>
  <Col
    span={24}
  >
    <p>
      0710853398
    </p>
  </Col>
  <Col
    span={24}
  >
    <p>
      gichuru.gichia@gmail.com
    </p>
  </Col>
  <Col
    span={24}
  >
    <Divider
      orientation="left"
    >
      Books
    </Divider>
  </Col>
  <Table
    columns={
      Array [
        Object {
          "dataIndex": "title",
          "ellipsis": true,
          "title": "Title",
          "width": "50%",
        },
        Object {
          "align": "right",
          "dataIndex": "returnDate",
          "key": "returnDate",
          "title": "Return date",
        },
        Object {
          "align": "right",
          "dataIndex": "amount",
          "key": "amount",
          "render": [Function],
          "title": "Amount",
        },
      ]
    }
    dataSource={Array []}
    footer={[Function]}
    pagination={false}
    rowKey="id"
    size="small"
  />
</Row>
`;

exports[`<ReceiptDocument /> should test ReceiptDocument component without user information 1`] = `
<Row
  className="printme"
>
  <Col
    span={24}
  >
    <Divider
      orientation="left"
    >
      Personal information
    </Divider>
  </Col>
  <Col
    span={24}
  >
    <p>
       
    </p>
  </Col>
  <Col
    span={24}
  >
    <p />
  </Col>
  <Col
    span={24}
  >
    <p />
  </Col>
  <Col
    span={24}
  >
    <Divider
      orientation="left"
    >
      Books
    </Divider>
  </Col>
  <Table
    columns={
      Array [
        Object {
          "dataIndex": "title",
          "ellipsis": true,
          "title": "Title",
          "width": "50%",
        },
        Object {
          "align": "right",
          "dataIndex": "returnDate",
          "key": "returnDate",
          "title": "Return date",
        },
        Object {
          "align": "right",
          "dataIndex": "amount",
          "key": "amount",
          "render": [Function],
          "title": "Amount",
        },
      ]
    }
    dataSource={Array []}
    footer={[Function]}
    pagination={false}
    rowKey="id"
    size="small"
  />
</Row>
`;
